--- a/app/src/main/res/layout/list_item_produto.xml
+++ b/app/src/main/res/layout/list_item_produto.xml
@@ -2,28 +2,50 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="72dp">
-
-    <TextView
-        android:id="@+id/textViewImagem"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="#000000"
-        android:layout_width="60dp"
-        android:gravity="center"
-        android:layout_height="match_parent"/>
+    android:layout_height="150dp">
 
 
-    <TextView
-        android:id="@+id/textViewNome"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="8"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:textStyle="bold"/>
+    <ImageView
+        android:id="@+id/imageViewFoto"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@mipmap/ic_launcher_shop"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textViewNome"
+            android:layout_width="235dp"
+            android:layout_height="30dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/textViewDescricao"
+            android:layout_width="235dp"
+            android:layout_height="30dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/textViewQuantidade"
+            android:layout_width="235dp"
+            android:layout_height="30dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/textViewQuantidadeMinima"
+            android:layout_width="235dp"
+            android:layout_height="30dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/textViewValor"
+            android:layout_width="235dp"
+            android:layout_height="30dp"
+            android:textStyle="bold"/>
+    </LinearLayout>
 
 
 </LinearLayout>
